--- a/frontend-HotelManagement/src/app/about/about.component.css
+++ b/frontend-HotelManagement/src/app/about/about.component.css
@@ -1,4 +1,20 @@
-mat-card{
-    margin:20px;
+.about{
+    margin:100px 30px 10px 30px;
     padding:5px;
+    height:calc(100%-100px);
+}
+mat-card {
+    margin:20px;
+    background: rgba(255,255,255,0.6);
+    color:black;
+    border-radius: 20pxs;
+}
+.navbarcomp {
+    display:block;
+}
+.about-content {
+    font-size: 25px;
+    font-family: cursive;
+    line-height: 1.2cm;
+    word-spacing: 10px;
 }
