--- a/frontend-HotelManagement/src/app/booking/booking.component.html
+++ b/frontend-HotelManagement/src/app/booking/booking.component.html
@@ -3,6 +3,7 @@
 </div> -->
 <!-- <h1>Booking component</h1> -->
 
+<app-navbar></app-navbar>
 <div class="container" >
   <table class="table table-bordered table-striped">
     <thead>
