--- a/frontend-HotelManagement/src/styles.css
+++ b/frontend-HotelManagement/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 body{
     /* background:rgb(205, 205, 205); */
-    background-image:url('./assets/pat.jpg');
+    background-image:url('./assets/heritage.jpg');
     background-size: cover;
     background-attachment: fixed;
 }
