--- a/frontend-HotelManagement/src/app/about/about.component.html
+++ b/frontend-HotelManagement/src/app/about/about.component.html
@@ -1,34 +1,14 @@
-<p>about works!</p>
-
-<mat-card>
-    <mat-card-header>
-      <mat-card-title>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis, distinctio deserunt debitis, minima modi illum laudantium accusamus ea iste non commodi facilis neque eligendi rerum accusantium atque! Nihil consequatur officiis hic. A reprehenderit neque maxime impedit praesentium nisi tempore eum ipsum delectus rerum dolore non accusamus placeat harum possimus, voluptates perspiciatis explicabo facere enim assumenda repudiandae temporibus pariatur velit vero. Quidem, sit! Porro quam quos, similique itaque repudiandae inventore rerum dolor veniam laudantium quibusdam corrupti fugiat nisi sed aliquid possimus, omnis eaque. Praesentium molestiae itaque incidunt illum enim autem ut. Asperiores, impedit repellat? Officia qui delectus officiis a placeat voluptatum?</mat-card-title>
-      <mat-card-subtitle>End</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-actions align="end">
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
-    </mat-card-actions>
-  </mat-card>
-
+<!-- <app-navbar></app-navbar> -->
+<div class="navbarcomp">
+  <app-navbar></app-navbar>
+</div>
+<div class="about">
   <mat-card>
-    <mat-card-header>
-      <mat-card-title>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error obcaecati dolorum magni rem sint, repudiandae mollitia amet hic ea placeat soluta animi! Voluptates esse qui natus veniam necessitatibus sint nulla fugit unde error doloribus assumenda, hic labore, excepturi, officiis laudantium expedita! Beatae distinctio nihil autem quisquam dolorum sit! Rem repudiandae dolore amet, repellendus repellat eveniet, aut ad nostrum quod alias corrupti, possimus vero asperiores. Unde nemo cum quia est harum ullam veniam provident soluta sunt, saepe quae officiis animi. Cum officiis quis labore alias ipsum ea, excepturi ipsam quia voluptates perspiciatis praesentium ullam voluptatum saepe nobis sint eveniet eligendi non.</mat-card-title>
-      <mat-card-subtitle>End</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-actions align="end">
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
-    </mat-card-actions>
-  </mat-card>
-
-  <mat-card>
-    <mat-card-header>
-      <mat-card-title>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor eligendi, voluptatibus beatae, distinctio quod atque cumque magni a dicta mollitia, suscipit libero tempora eius accusantium vero? Commodi eius ratione amet neque cupiditate aliquam sint eveniet, suscipit praesentium sit porro sequi iusto optio odio officia modi nemo! Similique inventore dolorem corrupti nemo ducimus dolor debitis tempore. Modi repellat atque omnis dicta blanditiis itaque voluptas ex perspiciatis, vero amet deserunt sapiente vel recusandae iusto neque expedita vitae eius. Sed velit non repellat necessitatibus laudantium, facere ipsam mollitia placeat deserunt quisquam, excepturi quod dolor nobis in magnam doloremque, odio esse ipsum eos ut.</mat-card-title>
-      <mat-card-subtitle>End</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-actions align="end">
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
-    </mat-card-actions>
-  </mat-card>
+      <mat-card-header>
+        <mat-card-title><p class="about-content">Welcome to Beiti Althani, where luxury and comfort converge to redefine your travel experience. As your premier destination for exceptional accommodations, Beiti Althani is committed to curating a collection of the finest stays worldwide, tailored to the most discerning tastes. Our name, "Beiti Althani," meaning "My Beautiful Home" in Arabic, embodies our dedication to providing you with a home away from home that exceeds all expectations.
+          Indulge in a world of opulence as you explore our carefully selected portfolio of city suites, beachfront villas, mountain retreats, and more. Each property featured on our platform is meticulously vetted to ensure unparalleled quality and service, guaranteeing that every moment of your stay is nothing short of extraordinary.          
+          Booking with Beiti Althani is a seamless and transparent experience, with our user-friendly platform enabling effortless reservations and secure transactions. Whether you seek a romantic getaway, a family retreat, or a solo adventure, Beiti Althani offers the perfect setting for every occasion.          
+          Trust Beiti Althani to elevate your travel journey, creating cherished memories in every destination you explore. Welcome to Beiti Althani, where luxury meets hospitality, and every stay feels like coming home to your own beautiful sanctuary.</p></mat-card-title>
+      </mat-card-header>
+  </mat-card>    
+</div>
