--- a/frontend-HotelManagement/src/app/booking/new/new.component.html
+++ b/frontend-HotelManagement/src/app/booking/new/new.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div *ngFor="let hotelsL of hotellist" class="hotels">
   <mat-card>
     <mat-card-content><strong><span class="hotelname">{{hotelsL.hotelname}}</span></strong></mat-card-content>
