--- a/frontend-HotelManagement/src/app/login/login.component.css
+++ b/frontend-HotelManagement/src/app/login/login.component.css
@@ -1,16 +1,48 @@
+.body{
+    display: flex;
+    align-items: center;
+}
+
 mat-form-field{
     display:block;
 }
-mat-card{
-    width:50%;
+.card{
+    background-color:rgba(0, 0, 0, 0.5);
+    width:400px;
+    height:350px;
     display:block;
-    margin:80px auto;
+    margin:10px 200px;
+    color:white;
+    float:right;
+    border-radius: 20px;
+    /* box-shadow: whitesmoke 0px 7px 29px 0px; */
 }
 
 .btnn{
+    background-color: rgba(0,0,0,0.5);
     margin:20px;
+    opacity: 1 !important;
+    border: 1px solid rgb(255, 146, 95);
 }
 
-body{
-    background-image:url('../../assets/the-palm-3840x2160-atlantis-dubai-hotel-6k-19258.jpg');
+.buttons {
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+mat-label {
+    color:white;
+}
+
+.heading {
+    justify-content: center;
+}
+
+.site {
+    color:rgb(255, 98, 0);
+    font-family: Pacifico;
+    padding:50px;
+    font-size: xxx-large;
 }
