--- a/frontend-HotelManagement/src/app/login/login.component.html
+++ b/frontend-HotelManagement/src/app/login/login.component.html
@@ -1,5 +1,6 @@
-<mat-card>
-    <mat-card-header>
+<h1 class="site">Beiti Althani</h1>
+<mat-card class="card">
+    <mat-card-header class="heading">
         <h2>User Login</h2>
     </mat-card-header>
     <mat-card-content>
@@ -13,11 +14,10 @@
                 <input matInput type="password" formControlName="password" >
               </mat-form-field>
             
-              <div>
+              <div class="buttons">
                 <button mat-raised-button color="primary" class="btnn">Login</button>
                 <a routerLink="/register" mat-raised-button color="accent" class="btnn">New User?</a>
               </div>
           </form>
     </mat-card-content>
   </mat-card>
-
