--- a/frontend-HotelManagement/src/app/register/register.component.css
+++ b/frontend-HotelManagement/src/app/register/register.component.css
@@ -10,3 +10,44 @@ mat-card{
 mat-radio-button, .btnn{
     margin:20px;
 }
+
+.card{
+    background-color:rgba(0, 0, 0, 0.5);
+    width:400px;
+    height:500px;
+    display:block;
+    margin:10px 200px;
+    color:white;
+    float:right;
+    border-radius: 20px;
+    /* box-shadow: whitesmoke 0px 7px 29px 0px; */
+}
+
+.btnn{
+    background-color: rgba(0,0,0,0.5);
+    margin:20px;
+    opacity: 1 !important;
+    border: 1px solid rgb(255, 146, 95);
+}
+
+.buttons {
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+mat-label {
+    color:white;
+}
+
+.heading {
+    justify-content: center;
+}
+
+.site {
+    color:rgb(255, 98, 0);
+    font-family: Pacifico;
+    padding:50px;
+    font-size: xxx-large;
+}
