--- a/frontend-HotelManagement/src/app/register/register.component.html
+++ b/frontend-HotelManagement/src/app/register/register.component.html
@@ -1,5 +1,6 @@
-<mat-card>
-    <mat-card-header>
+<h1 class="site">Beiti Althani</h1>
+<mat-card class="card">
+    <mat-card-header class="heading">
         <h2>Registeration</h2>
     </mat-card-header>
     <mat-card-content>
@@ -24,7 +25,7 @@
                 <mat-radio-button value="male">Male</mat-radio-button>
                 <mat-radio-button value="female">Female</mat-radio-button>
               </mat-radio-group>
-              <div>
+              <div class="buttons">
                 <button (click)="proceedregister()" mat-raised-button color="primary" class="btnn">Submit</button>
                 <a routerLink="/" mat-raised-button color="accent" class="btnn">Back to Login</a>
               </div>
