--- a/frontend-HotelManagement/src/app/staff-details/staff-details.component.html
+++ b/frontend-HotelManagement/src/app/staff-details/staff-details.component.html
@@ -1,4 +1,5 @@
 <!-- <h1>staff-details works!</h1> -->
+<app-navbar></app-navbar>
 <div class="container">
     <table class="table table-bordered table-striped">
       <thead>
